AxoAlert refactor, axo alert observer added

--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_1.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/AxoDialogs/DialogExamplesHandling_1.razor
@@ -5,6 +5,6 @@
 
 <h3>Dialog Examples Handling</h3>
 
-<AxoDialogLocator DialogLocatorPath="dialog1" ObservedObjects="new[] {Entry.Plc.D_111}"></AxoDialogLocator>
+<AxoDialogLocator LocatorPath="dialog1" ObservedObjects="new[] {Entry.Plc.D_111}"></AxoDialogLocator>
 
-<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new [] {Entry.Plc.D_111}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
+<AXOpen.Core.Blazor.Dialogs.AxoAlertLocator ObservedObjects="new [] {Entry.Plc.D_111}"></AXOpen.Core.Blazor.Dialogs.AxoAlertLocator>
