--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/Index.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @*@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;*@
-@*@inject IAlertDialogService DialogService*@
+@*@inject IAlertService DialogService*@
 
 <PageTitle>Index</PageTitle>
 
