--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/Locator/AxoDialogLocator.razor
@@ -1,4 +1,5 @@
 ﻿@namespace AXOpen.Core.Blazor.AxoDialogs
+@inherits AXOpen.Core.Blazor.Dialogs.AxoLocator;
 
 @if (_dialogProxyService?.DisplayedDialogs.Count() > 0)
 {
