--- a/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Rendering.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Pages/Rendering.razor
@@ -3,7 +3,7 @@
 @using AXOpen.Data;
 @using librarytemplate
 @inject AuthenticationStateProvider _authenticationProvider
-@inject IAlertDialogService _alertDialogService
+@inject IAlertService _alertDialogService
 <div class="card">
     <div class="card-header">
         <h2>DataExchange PresentationType="Command"</h2>
