--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/AxoDataDocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/AxoDataDocuExamples.razor
@@ -1,7 +1,7 @@
 ﻿@page "/DocuExamples/AxoDataDocuExamples"
 @using AXOpen.Base.Dialogs;
 @using AXOpen.Data;
-@inject IAlertDialogService _alertDialogService;
+@inject IAlertService _alertDialogService;
 @inject AuthenticationStateProvider _authenticationProvider;
 
 <h3>Editable</h3>
