--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
@@ -2,7 +2,7 @@
 @*@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;*@
 @using axopen_integrations_blazor.Data
 @using AXOpen.Base.Dialogs
-@inject IAlertDialogService DialogService
+@inject IAlertService DialogService
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather forecast</PageTitle>
