--- a/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
+++ b/src/templates.simple/ax/src/templates/starterunit/server/StarterUnitTemplate.razor
@@ -5,7 +5,7 @@
 @using AXOpen.VisualComposer;
 @using AXSharp.Connector;
 
-@inject IAlertDialogService _alerts
+@inject IAlertService _alerts
 @inherits RenderableComplexComponentBase<axosimple.StarterUnitTemplate.Unit>
 
 <Unit Component="Entry.Plc.Context.StarterUnitTemplate"
