--- a/src/core/app/ix-blazor/axopencore.blazor/Pages/FetchData.razor
+++ b/src/core/app/ix-blazor/axopencore.blazor/Pages/FetchData.razor
@@ -2,7 +2,7 @@
 @*@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;*@
 @using axopen_integrations_blazor.Data
 @using AXOpen.Base.Dialogs
-@inject IAlertDialogService DialogService
+@inject IAlertService DialogService
 @inject WeatherForecastService ForecastService
 
 <PageTitle>Weather forecast</PageTitle>
@@ -53,6 +53,6 @@ else
 
     public void CreateToast()
     {
-        DialogService.AddAlertDialog(eAlertDialogType.Success, "Test", "test", 30);
+        DialogService.AddAlertDialog(eAlertType.Success, "Test", "test", 30);
     }
 }
