--- a/src/data/app/ix-blazor/librarytemplate.blazor/Pages/TestingPersistentData.razor
+++ b/src/data/app/ix-blazor/librarytemplate.blazor/Pages/TestingPersistentData.razor
@@ -3,7 +3,7 @@
 @using AXOpen.Data;
 @using librarytemplate
 @inject AuthenticationStateProvider _authenticationProvider
-@inject IAlertDialogService _alertDialogService
+@inject IAlertService _alertDialogService
 
 <PageTitle>TestingPersistentData</PageTitle>
 
