--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
@@ -4,7 +4,7 @@
 @using AXSharp.Connector
 @using Microsoft.AspNetCore.Components.Authorization;
 @inherits RenderableComplexComponentBase<AxoDataExchangeBase>;
-@inject IAlertDialogService _alertDialogService
+@inject IAlertService _alertDialogService
 @inject AuthenticationStateProvider _authenticationProvider
 
 <DataExchangeView Vm="_vm" Presentation="Command"></DataExchangeView>
