--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Status/AxoDataExchangeBaseStatusView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Status/AxoDataExchangeBaseStatusView.razor
@@ -2,7 +2,7 @@
 @using AXSharp.Connector
 @using Microsoft.AspNetCore.Components.Authorization;
 @inherits RenderableComplexComponentBase<AxoDataExchangeBase>;
-@inject IAlertDialogService _alertDialogService
+@inject IAlertService _alertDialogService
 @inject AuthenticationStateProvider _authenticationProvider
 <DataExchangeView Vm="_vm" Presentation="Status"></DataExchangeView>
 
