--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/AxoDataFragmetsDocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/AxoDataFragmetsDocuExamples.razor
@@ -1,7 +1,7 @@
 ﻿@page "/DocuExamples/AxoDataFragmetsDocuExamples"
 @using AXOpen.Base.Dialogs;
 @using AXOpen.Data;
-@inject IAlertDialogService _alertDialogService;
+@inject IAlertService _alertDialogService;
 @inject AuthenticationStateProvider _authenticationProvider;
 
 <h3>Editable</h3>
