--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @*@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;*@
-@*@inject IAlertDialogService DialogService*@
+@*@inject IAlertService DialogService*@
 
 <PageTitle>Index</PageTitle>
 
