--- a/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
+++ b/src/templates.simple/axpansion/server/Pages/Context/UnitsOverview.razor
@@ -4,7 +4,7 @@
 @using AXOpen.Core;
 @using AXOpen.Core.Blazor.AxoAlertDialog;
 @using AXOpen.Base.Dialogs
-@inject IAlertDialogService _alerts
+@inject IAlertService _alerts
 
 <div class="container">
     <div class="row">
