messenger temporarilly fixed

--- a/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
@@ -93,7 +93,7 @@
     {
         @if (!areAlarmsCollapsed)
         {
-            <AxoObjectDiagnosticsView Component="@this.Component"></AxoObjectDiagnosticsView>
+            <AxoObjectDiagnosticsView ObservedObjects="new ITwinObject[] {this.Component}"></AxoObjectDiagnosticsView>
         }
     }
     else
