--- a/src/components.rexroth.drives/app/ix-blazor/Pages/Testing.razor
+++ b/src/components.rexroth.drives/app/ix-blazor/Pages/Testing.razor
@@ -5,7 +5,7 @@
 
 
 <div class="col">
-    <RenderableContentControl Context="@Entry.Plc.sandbox._testDrive._isManuallyControllable" Presentation="Display" />
+    <RenderableContentControl Context="@Entry.Plc.sandbox.IndraDrive._isManuallyControllable" Presentation="Display" />
 </div>
 
 <RenderableContentControl Context="@Entry.Plc.sandbox" Presentation="Command-Control" PollingInterval="100" />
