--- a/src/components.cognex.vision/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Pages/Component_1.razor
@@ -1,13 +1,14 @@
 ﻿@page "/Component_1"
 @using AXOpen.Core;
-git 
+
+<PageTitle>Documentation</PageTitle>
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.testInsight" />
+<AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.Insight_7600" />
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.testInsight" />
+<AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.Insight_7600" />
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
