--- a/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerItemModal.razor
@@ -12,6 +12,18 @@
                         </div>
                         <div class="modal-body justify-content-center">
                             <div class="mb-1 row">
+                                <label class="col-sm-2 col-form-label">Top</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" placeholder="Top" @bind="Origin.Top">
+                                </div>
+                            </div>
+                            <div class="mb-1 row">
+                                <label class="col-sm-2 col-form-label">Left</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" placeholder="Left" @bind="Origin.Left">
+                                </div>
+                            </div>
+                            <div class="mb-1 row">
                                 <label class="col-sm-2 col-form-label">Presentation</label>
                                 <div class="col-sm-6">
                                     @if (Origin.CustomPresentation)
@@ -81,15 +93,9 @@
                                 </div>
                             </div>
                             <div class="mb-1 row">
-                                <label class="col-sm-2 col-form-label">X</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" placeholder="AXOpen.Core.AxoObject" @bind="Origin.PosX">
-                                </div>
-                            </div>
-                            <div class="mb-1 row">
-                                <label class="col-sm-2 col-form-label">Y</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" placeholder="AXOpen.Core.AxoObject" @bind="Origin.PosY">
+                                <label class="col-sm-2 col-form-label">Background</label>
+                                <div class="col-sm-10 d-flex align-items-center">
+                                    <input class="form-check-input ms-2 mt-0" type="checkbox" checked="@(Origin.Background ? "checked" : null)" @onclick="() => Origin.Background = !Origin.Background">
                                 </div>
                             </div>
                         </div>
