--- a/src/base/src/AXOpen.VisualComposer/VisualComposerItem.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerItem.razor
@@ -7,7 +7,8 @@
                     <RenderableContentControl @ref="renderableContentControlRcc"
                                               Context="@TwinElement"
                                               Presentation="@Presentation.ToString()"
-                                              ParentContainer="@this" />
+                                              ParentContainer="@this"
+                                              PresentationTemplate="@PresentationTemplate" />
                 </div>
                 <a class="position-absolute text-decoration-none text-black" style="left: 97%; top: 0%; translate: -100% -50%; cursor: pointer;" data-bs-toggle="modal"
                    data-bs-target="#settings-@Id.Replace('.', '_')-@UniqueGuid">
@@ -17,11 +18,12 @@
         }
         else
         {
-            <div style="position: absolute; left: @(Left.ToString().Replace(',', '.'))%; top: @(Top.ToString().Replace(',', '.'))%; transform: scale(@(Scale)); translate: @(Transform.X)% @(Transform.Y)%; @(Width != -1 ? "width: " + Width + "rem" : null); @(Height != -1 ? "height: " + Height + "rem" : null); z-index: @ZIndex;">
+            <div style="position: absolute; left: @(Left.ToString().Replace(',', '.'))%; top: @(Top.ToString().Replace(',', '.'))%; transform: scale(@(Scale)); translate: @(Transform.X)% @(Transform.Y)%; width: @(Width != -1 ? Width + "rem" : "max-content"); height: @(Height != -1 ? Height + "rem" : "max-content"); z-index: @ZIndex;">
                 <div class="@(Background ? "card border border-3 p-2 rounded-3" : null)">
                     <RenderableContentControl Context="@TwinElement"
                                               Presentation="@Presentation.ToString()"
-                                              ParentContainer="@this" />
+                                              ParentContainer="@this"
+                                              PresentationTemplate="@PresentationTemplate" />
                 </div>
             </div>
         }
@@ -30,22 +32,24 @@
         @if (Roles != null && Roles != "")
         {
             <AuthorizeView Roles="@Roles" Context="SecondAuthorizeView">
-                <div style="position: absolute; left: @(Left.ToString().Replace(',', '.'))%; top: @(Top.ToString().Replace(',', '.'))%; translate: @(Transform.X)% @(Transform.Y)%; @(Width != -1 ? "width: " + Width + "rem" : null); @(Height != -1 ? "height: " + Height + "rem" : null); z-index: @ZIndex;">
+                <div style="position: absolute; left: @(Left.ToString().Replace(',', '.'))%; top: @(Top.ToString().Replace(',', '.'))%; translate: @(Transform.X)% @(Transform.Y)%; width: @(Width != -1 ? Width + "rem" : "max-content"); height: @(Height != -1 ? Height + "rem" : "max-content"); z-index: @ZIndex;">
                     <div class="@(Background ? "card border border-3 p-2 rounded-3" : null)">
                         <RenderableContentControl Context="@TwinElement"
                                                   Presentation="@Presentation.ToString()"
-                                                  ParentContainer="@this" />
+                                                  ParentContainer="@this"
+                                                  PresentationTemplate="@PresentationTemplate" />
                     </div>
                 </div>
             </AuthorizeView>
         }
         else
         {
-            <div style="position: absolute; left: @(Left.ToString().Replace(',', '.'))%; top: @(Top.ToString().Replace(',', '.'))%; translate: @(Transform.X)% @(Transform.Y)%; @(Width != -1 ? "width: " + Width + "rem" : null); @(Height != -1 ? "height: " + Height + "rem" : null); z-index: @ZIndex;">
+            <div style="position: absolute; left: @(Left.ToString().Replace(',', '.'))%; top: @(Top.ToString().Replace(',', '.'))%; translate: @(Transform.X)% @(Transform.Y)%; width: @(Width != -1 ? Width + "rem" : "max-content"); height: @(Height != -1 ? Height + "rem" : "max-content"); z-index: @ZIndex;">
                 <div class="@(Background ? "card border border-3 p-2 rounded-3" : null)">
                     <RenderableContentControl Context="@TwinElement"
                                               Presentation="@Presentation.ToString()"
-                                              ParentContainer="@this" />
+                                              ParentContainer="@this"
+                                              PresentationTemplate="@PresentationTemplate" />
                 </div>
             </div>
         }
