Rexroth smart kit

--- a/src/components.rexroth.press/app/ix-blazor/Pages/Component_1.razor
+++ b/src/components.rexroth.press/app/ix-blazor/Pages/Component_1.razor
@@ -3,11 +3,11 @@
 
 
 <!-- <GenericComponentStatusView> -->
-<AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.ExampleCylinder"/>
+<AxoComponentStatusView Component="@Entry.Plc.documentation.componentOne.AxoSmartFunctionKit"/>
 <!-- </GenericComponentStatusView> -->
 
 <!-- <GenericComponentCommandView> -->
-<AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.ExampleCylinder" />
+<AxoComponentCommandView Component="@Entry.Plc.documentation.componentOne.AxoSmartFunctionKit" />
 <!-- </GenericComponentCommandView> -->
 
 <!-- <RccComponentStatusView> -->
