--- a/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
+++ b/src/base/src/AXOpen.VisualComposer/VisualComposerContainer.razor
@@ -52,7 +52,7 @@
                     <div onmousedown="event.preventDefault();">
                         @if (EmptyBackground)
                         {
-                            <div id="@_backgroundId" style="width: @(BackgroundWidth)%; height: @(BackgroundHeight)vh;"></div>
+                            <div id="@_backgroundId" style="width: @(BackgroundWidth)%; height: @(BackgroundHeight)vh; background-color: @(BackgroundColor);"></div>
                         }
                         else
                         {
@@ -120,7 +120,7 @@
                                                             break;
                                                     }
 
-                                                    <p class="mb-0">@item.Symbol</p>
+                                                    <p class="mb-0 text-truncate">@item.Symbol</p>
                                                     <a class="ms-auto text-decoration-none text-black" style="cursor: pointer;" @onclick="() => AddChildren(item)"><span class="bi bi-plus-lg" aria-hidden="true" /></a>
                                                 </li>
                                             }
@@ -325,6 +325,12 @@
                                                             <input type="number" class="form-control" placeholder="Height" @bind="BackgroundHeight" step="1">
                                                         </div>
                                                     </div>
+                                                    <div class="mb-1 row">
+                                                        <label class="col-sm-2 col-form-label">Color</label>
+                                                        <div class="col-sm-10">
+                                                            <input type="color" class="form-control form-control-color" @bind="BackgroundColor" title="Choose color">
+                                                        </div>
+                                                    </div>
                                                     <div class="d-flex justify-content-end">
                                                         <button type="button" class="btn btn-primary" data-bs-dismiss="modal" @onclick="SetEmptyBackground">Save</button>
                                                     </div>
@@ -353,7 +359,7 @@
                     <div style="position: relative; width: 100%; height: 100%;">
                         @if (EmptyBackground)
                         {
-                            <div id="@_backgroundId" style="width: @(BackgroundWidth)%; height: @(BackgroundHeight)vh;"></div>
+                            <div id="@_backgroundId" style="width: @(BackgroundWidth)%; height: @(BackgroundHeight)vh; background-color: @(BackgroundColor);"></div>
                         }
                         else
                         {
